# lstm_music_generator

./: .gitignore  README.md  addTrack.py  generate.py  musicTheory.py  network.py  pyproject.toml  train.py  utils.py
11.14post/: printnoteV2.py  test.mid  writemap.py
11.21post/: 11.17.pptx  a1-c.mid  a1.mid  chordadd.py  notemap.txt  printnoteV2.py  timamap.txt  writemap.py
11.24post/: chordadd.py  output2.mid  printnoteV2.py  whichkey.py  writemap.py
data/: notes
musicTheory/: chord.json  rythem.json
music_midi/: BEYER079.MID  BEYER081.MID  BEYER082.MID  BEYER084.MID  BEYER087.MID  BEYER088.MID  BEYER090.MID  BEYER093.MID  BEYER094.MID  BEYER095.MID  BEYER096.MID  BEYER097.MID  BEYER099.MID  appass_1.mid  appass_2.mid  appass_3.mid  beethoven_hammerklavier_1.mid  beethoven_hammerklavier_2.mid  beethoven_hammerklavier_3.mid  beethoven_hammerklavier_4.mid  beethoven_les_adieux_1.mid  beethoven_les_adieux_2.mid  beethoven_les_adieux_3.mid  beethoven_opus10_1.mid  beethoven_opus10_2.mid  beethoven_opus10_3.mid  beethoven_opus22_1.mid  beethoven_opus22_2.mid  beethoven_opus22_3.mid  beethoven_opus22_4.mid  beethoven_opus90_1.mid  beethoven_opus90_2.mid  elise.mid  mond_1.mid  mond_2.mid  mond_3.mid  pathetique_1.mid  pathetique_2.mid  pathetique_3.mid  waldstein_1.mid  (+2 more)
post/: addmusic.py  generate.py  music.py  network.py  printnote.py  train.py
src/: a1.mid  addmusic.py  main.ipynb  main.py  printnote.py  writemap.py
src/data/music_midi/: BEYER080.MID  (+7 more)
train/: generate.py  main.py  utils.py
訂正加註解/: printnoteV2.py  timamap.txt  whichkey.py  whichkeys.py
(+5 files in other folders)
