[tool.poetry]
name = "lstm_music_generator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.8.6"
mido = "^1.2.9"
tensorflow = "^2.3.1"
pretty_midi = "^0.2.9"
music21 = "^6.3.0"
matplotlib = "^3.3.3"
fire = "^0.3.1"
jupyterlab = "^2.2.9"
ipykernel = "^5.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
